[tool.poetry]
name = "4h-computer-project"
version = "0.1.0"
description = ""
authors = ["Ethan Furst"]
readme = "README.md"
packages = [{include = "4h_computer_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
